# catapulta

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml  pages.yaml
examples/: basic_deploy.rs  cloudflare_dns.rs  libvirt_deploy.rs  local_deploy.rs  multi_app.rs  with_basic_auth.rs
scripts/: setup-server.sh
src/: app.rs  caddy.rs  caddyfile.rs  cmd.rs  compose.rs  error.rs  lib.rs  pipeline.rs  ssh.rs
src/deploy/: cloudflare_pages.rs  docker_save.rs  local.rs  mod.rs
src/dns/: cloudflare.rs  mod.rs  ovh.rs
src/provision/: digitalocean.rs  libvirt.rs  mod.rs
tests/: app.rs  caddy.rs  caddyfile.rs  compose.rs  dns.rs  dns_ovh.rs  error.rs  provision_digitalocean.rs  provision_libvirt.rs  source_build.rs
